Admin export and saving survey answers

--- a/soundscape-server/env.example
+++ b/soundscape-server/env.example
@@ -5,5 +5,9 @@
 # Generate a secure random string for production
 JWT_SECRET=your-secure-jwt-secret-key-here
 
+# Admin key for data export (REQUIRED for production)
+# Generate a secure random string for production
+ADMIN_KEY=your-secure-admin-key-here
+
 # Port number (optional - Render will set this automatically)
 PORT=3001 
