--- a/soundscape-app/package.json
+++ b/soundscape-app/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "curl http://localhost:5173"
   },
   "dependencies": {
     "axios": "^1.10.0",
