--- a/soundscape-server/package.json
+++ b/soundscape-server/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "dev": "node src/server.js",
+    "check": "curl http://localhost:3001/protected"
   },
   "keywords": [],
   "author": "",
