--- a/soundscape-app/package.json
+++ b/soundscape-app/package.json
@@ -8,10 +8,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "check": "curl http://localhost:5173"
+    "check": "curl http://localhost:5173",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "express": "^5.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
